[package]
name = "rust-event-listener"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "1", features = ["full"] }
dotenvy = "0.15"
eyre = "0.6.12"
futures-util = "0.3.31"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
